# sett-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: matrix_inversion.rs  run_from_config.rs  run_from_legacy_config.rs  run_simple_engine.rs  solve_ode.rs
matlab/: Cargo.toml  build.rs
matlab/src/: lib.rs
sett/: Cargo.toml
sett/examples/: run_from_config.rs  run_from_legacy_config.rs  run_simple_engine.rs
sett/src/: api.rs  chx.rs  hhx.rs  regen.rs  state_equations.rs
sett/src/chx/: fixed_approach.rs  fixed_conductance.rs
sett/src/fluid/: ideal_gas.rs
sett/src/hhx/: gpu3.rs  mod2.rs
sett/src/regen/: fixed_approach.rs
sett/src/state_equations/: flow_direction.rs
sett/src/state_equations/test_inputs/: ideal_gas_hydrogen.json
sett/src/ws/: gpu3.rs  mod2.rs  sinusoidal_drive.rs
src/: api.rs  chx.rs  config.rs  engine.rs  fluid.rs  hhx.rs  lib.rs  performance.rs  regen.rs  state.rs  state_equations.rs  types.rs  ws.rs
src/chx/: fixed_approach.rs  fixed_conductance.rs  gpu3.rs  mod2.rs
src/config/: conditions.rs  engine.rs  solver.rs
src/config/engine/: chx.rs  fluid.rs  hhx.rs  regen.rs  ws.rs
src/engine/: run.rs  state.rs
src/fluid/: ideal_gas.rs
src/hhx/: fixed_approach.rs  fixed_conductance.rs  gpu3.rs  mod2.rs  ni_gpu3.rs  ni_mod2.rs
src/regen/: fixed_approach.rs  fixed_conductance.rs  gpu3.rs  mod2.rs  types.rs
src/state_equations/: cycle.rs  inputs.rs  integrator.rs  solver.rs  types.rs
src/ws/: gpu3.rs  mod2.rs  rhombic_drive.rs  sinusoidal_drive.rs
(+1 files in other folders)
