[package]
name = "sett-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
na = { package="nalgebra", version="0.31.4" }
ode_solvers = "0.3.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
approx = "0.5.1"
insta = { version = "1.26.0", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
